[package]
name = "tosdr-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0.190"
features = ["derive"]

[dependencies.ureq]
version = "2.8.0"
features = ["json"]
